fix flickering when click on navbar + minor changes

--- a/front/src/app/middle-content/middle-content.component.css
+++ b/front/src/app/middle-content/middle-content.component.css
@@ -12,11 +12,13 @@
   width: 100%;
   height: auto;
   margin: 1px;
+  transform: scale(1);
+  transition-duration: 0.33s;
 }
 
-img:hover {
-  transform: scale(1.1);
-  transition-duration: 0.3s;
+.img:hover {
+  transform: scale(1.03);
+  transition-duration: 0.33s;
   cursor: pointer;
 }
 
